updating our details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Charlotte, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I really wanted to change careers, and be able to creat my own projects</p>
+      <p>I really wanted to change careers, and be able to create my own projects</p>
     </section>
 
     <footer id="footer">
